# elemental-game

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  fswatch-build.env
.vim/: local.vimrc
Apps/: CMakeLists.txt
Apps/Demos/: CMakeLists.txt
Apps/Demos/phong/: CMakeLists.txt  Entity.cpp  Entity.hpp  GameSettings.hpp  Phong.cpp  Phong.hpp  Scene.cpp  Scene.hpp  info.plist.in  main.cpp
Apps/Demos/phong/Assets/: MainScene.json
Apps/Demos/phong/Assets/Scripts/: Ball.js
Apps/Editors/: CMakeLists.txt  EditorWindow.cpp  EditorWindow.hpp  EntityEditor.cpp  EntityEditor.hpp  EntityEditor.ui  ExceptionDialog.hpp  JsonEditor.cpp  JsonEditor.hpp  JsonEditor.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Makefile.am  QwApplication.hpp  README.md  main.cpp
CMake/: BuildProperties.cmake
LICENSES/: README.md
Modules/: CMakeLists.txt  QJsonModel.cmake
Modules/EditorWidgets/: .clang-tidy  CMakeLists.txt  DocumentEditor.cpp  DocumentEditor.hpp  DocumentEditor.impl.hpp  DocumentEditor.ui  ExceptionDialog.cpp  ExceptionDialog.hpp  ExceptionDialog.ui  JsonEditor.cpp  JsonEditor.hpp  JsonEditor.ui
Modules/QJsonModel/: CMakeLists.txt  LICENSE  QJsonModel.cpp  README.md
Modules/QJsonModel/include/: QJsonModel.hpp
Modules/QJsonModel/include/details/: QUtf8.hpp
Modules/elemental/: CMakeLists.txt  Component.hpp  JsonConfigFile.cpp  JsonConfigFile.hpp  LoopRegulator.cpp  Observable.cpp  Observable.hpp  SdlEventSource.cpp  SdlEventSource.hpp  SdlRenderer.cpp  Singleton.hpp  paths.cpp  types.hpp
Modules/elemental/include/: ComponentFactory.hpp  INonCopyable.hpp  JsonConfigFile.hpp  LoopRegulator.hpp
Modules/elemental/include/details/: ComponentFactory.impl.hpp
Modules/elemental/include/sys/: paths.hpp
Modules/elemental/include/types/: input.hpp  rendering.hpp  units.hpp
Modules/elemental/sys/: debuginfo.hpp
Modules/elemental/types/: rendering.hpp
Modules/elemental/util/: testing.hpp
Tests/: CMakeLists.txt  IRenderer.test.cpp  JsonConfigFile.test.cpp  LoopRegulator.test.cpp  SDL_Memory.test.cpp  Singleton.template.test.cpp  paths.test.cpp  runtime.test.cpp
Tests/data/: winter_map.jpg.license
Tests/sdl/: CMakeLists.txt  SdlEventSource.test.cpp
Tests/test-utils/: SdlHelpers.hpp
app/: CMakeLists.txt
apps/: CMakeLists.txt
apps/game/: CMakeLists.txt  ElementalGame.cpp  ElementalGame.hpp  main.cpp
cmake/: BuildProperties.cmake
data/tests/: test-skull.png.license
demo/: CMakeLists.txt
demo/kong/: CMakeLists.txt  GameScene.hpp  Kong.cpp  Kong.hpp  MenuScene.hpp  main.cpp
demo/phong/: GameScene.hpp  GameSettings.hpp  MenuScene.hpp  Phong.cpp  Phong.hpp  main.cpp
editorconfig/: local.vimrc
include/: Application.hpp  Component.hpp  ComponentFactory.hpp  ComponentFactory.thpp  Configuration.hpp  Exception.hpp  FileResource.hpp  IApplication.hpp  IDrawable.hpp  IEventEmitter.hpp  IEventSource.hpp  INonCopyable.hpp  IObserver.hpp  IRenderer.hpp  ISceneOrchestrator.hpp  JsonConfigFile.hpp  LoopRegulator.hpp  Observable.hpp  SDL_Memory.hpp  SDL_Memory.thpp  Scene.hpp  SdlEventEmitter.hpp  SdlEventSource.hpp  SdlRenderer.hpp  Singleton.hpp  Singleton.template.hpp  Singleton.thpp  any_ptr.thpp  exception.hpp  type-aliases.hpp  types.hpp
include/details/: ComponentFactory.impl.hpp  ComponentFactory.impl.thpp
include/private/: debuginfo.hpp  platform.hpp
include/renderers/: SdlRenderer.hpp
include/sys/: debuginfo.hpp  loadcfg.hpp  paths.hpp  platform.hpp
include/types/: Result.hpp  any_ptr.hpp  configuration.hpp  containers.hpp  errors.hpp  input.hpp  legible_ctypes.hpp  pointers.hpp  rendering.hpp
include/util/: bitwise.hpp  debug.hpp  debugprint.hpp  testing.hpp
scripts/: fswatch-build.sh  fswatch-docs.sh  run-clang-tidy.sh
src/: Application.cpp  CMakeLists.txt  Configuration.cpp  Exception.cpp  FileResource.cpp  JsonConfigFile.cpp  LoopRegulator.cpp  Observable.cpp  SdlEventEmitter.cpp  SdlEventSource.cpp  SdlRenderer.cpp  debuginfo.cpp  exception.cpp  library.cpp  loadcfg.cpp  paths.cpp
tests/: Application.test.cpp  CMakeLists.txt  Configuration.test.cpp  Exception.test.cpp  FileResource.test.cpp  IRenderer.test.cpp  JsonConfigFile.test.cpp  LoopRegulator.test.cpp  Observable.test.cpp  SDL_Memory.test.cpp  SdlRenderer.test.cpp  Singleton.template.test.cpp  any_ptr.test.cpp  common.hpp  exception.test.cpp  loadcfg.test.cpp  paths.test.cpp  runtime-tests.cpp  runtime.test.cpp
tests/sdl/: CMakeLists.txt  SdlEventSource.test.cpp  SdlMain.cpp  SdlRenderer.test.cpp
tests/test-utils/: SdlHelpers.hpp  common.hpp
tests/utils/: SdlHelpers.hpp
